--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
             python3-dev \
             zip \
             unzip \
-            openjdk-17-jdk \
+            openjdk-8-jdk \
             libncurses5-dev \
             libstdc++6 \
             zlib1g-dev \
@@ -54,15 +54,19 @@ jobs:
           sudo apt-get install -y openjdk-17-jdk
           java -version
 
-      # Step 5: Set JAVA_HOME environment variable and ensure unzip is available
-      - name: Set JAVA_HOME to JDK 17 and ensure unzip is available
+      # Step 5: Set JAVA_HOME environment variable
+      - name: Set JAVA_HOME to JDK 17
         run: |
           echo "JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64" >> $GITHUB_ENV
           echo "PATH=\$JAVA_HOME/bin:\$PATH" >> $GITHUB_ENV
+
+      # Step 6: Ensure unzip is available
+      - name: Ensure unzip is available
+        run: |
           which unzip || echo "unzip not found"
           echo "PATH=\$PATH:/usr/bin" >> $GITHUB_ENV
 
-      # Step 6: Set up Android SDK manually
+      # Step 7: Set up Android SDK manually
       - name: Set up Android SDK
         uses: android-actions/setup-android@v3
         with:
@@ -71,42 +75,49 @@ jobs:
           log-accepted-android-sdk-licenses: true
         env:
           ANDROID_SDK_ROOT: /usr/local/lib/android/sdk
+          PATH: $PATH:/usr/local/lib/android/sdk/cmdline-tools/latest/bin
 
-      # Step 7: Install Android SDK components
+      # Step 8: Install Android SDK components
       - name: Install Android SDK components
         run: |
           sdkmanager --update
-          sdkmanager "platform-tools" "build-tools;30.0.3" "platforms;android-30" "aidl"
+          sdkmanager "platform-tools" "build-tools;30.0.3" "platforms;android-30" "cmdline-tools;latest"
 
-      # Step 8: Force Accept SDK licenses
+      # Step 9: Ensure aidl is in the PATH
+      - name: Ensure aidl is available in PATH
+        run: |
+          which aidl || echo "aidl not found"
+          echo "PATH=$PATH:/usr/local/lib/android/sdk/cmdline-tools/latest/bin" >> $GITHUB_ENV
+
+      # Step 10: Force Accept SDK licenses
       - name: Accept SDK licenses
         run: |
           yes | sdkmanager --licenses
 
-      # Step 9: Set permissions for SDK folder
+      # Step 11: Set permissions for SDK folder
       - name: Set permissions for SDK folder
         run: |
           sudo chown -R $USER:$USER /usr/local/lib/android/sdk
           sudo chmod -R 755 /usr/local/lib/android/sdk
 
-      # Step 10: Verify Android SDK installation
+      # Step 12: Verify Android SDK installation
       - name: Verify Android SDK installation
         run: |
           echo "Listing installed SDK components"
           sdkmanager --list
 
-      # Step 11: Install Buildozer and Cython
+      # Step 13: Install Buildozer and Cython
       - name: Install Buildozer and Cython
         run: |
           python -m pip install cython
           python -m pip install buildozer
 
-      # Step 12: Build APK
+      # Step 14: Build APK
       - name: Build APK
         run: |
           buildozer android debug
 
-      # Step 13: Upload APK as an artifact
+      # Step 15: Upload APK as an artifact
       - name: Upload APK artifact
         uses: actions/upload-artifact@v3
         with:
