--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,43 +49,32 @@ jobs:
             git \
             python3-distutils  # Install distutils explicitly
 
-      # Step 4: Install distutils manually from source if it's missing
+      # Step 4: Reinstall distutils if not found (alternative to manual installation)
       - name: Ensure distutils is available
         run: |
-          if ! python3 -c "import distutils" &>/dev/null; then
-            echo "distutils not found, installing manually"
-            curl -LO https://github.com/python/cpython/archive/refs/tags/v3.12.8.tar.gz
-            tar -xvf v3.12.8.tar.gz
-            cd cpython-3.12.8/Lib
-            sudo python3 setup.py install
-          fi
+          python3 -m ensurepip --upgrade
+          python3 -m pip install --upgrade pip
+          sudo apt-get install --reinstall python3-distutils
 
-      # Step 5: Set distutils path (add distutils to PATH)
-      - name: Add distutils to PATH
-        run: |
-          export DISTUTILS_PATH=$(python3 -c "import distutils.sysconfig; print(distutils.sysconfig.get_python_lib())")
-          echo "Adding distutils to PATH"
-          echo "PATH=$DISTUTILS_PATH:$PATH" >> $GITHUB_ENV
-
-      # Step 6: Install JDK 17 (to resolve sdkmanager errors)
+      # Step 5: Install JDK 17 (to resolve sdkmanager errors)
       - name: Install JDK 17
         run: |
           sudo apt-get install -y openjdk-17-jdk
           java -version
 
-      # Step 7: Set JAVA_HOME environment variable
+      # Step 6: Set JAVA_HOME environment variable
       - name: Set JAVA_HOME to JDK 17
         run: |
           echo "JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64" >> $GITHUB_ENV
           echo "PATH=\$JAVA_HOME/bin:\$PATH" >> $GITHUB_ENV
 
-      # Step 8: Install unzip and make sure it's on the path
+      # Step 7: Install unzip and make sure it's on the path
       - name: Ensure unzip is available
         run: |
           which unzip || echo "unzip not found"
           echo "PATH=\$PATH:/usr/bin" >> $GITHUB_ENV
 
-      # Step 9: Set up Android SDK manually
+      # Step 8: Set up Android SDK manually
       - name: Set up Android SDK
         uses: android-actions/setup-android@v3
         with:
@@ -95,41 +84,41 @@ jobs:
         env:
           ANDROID_SDK_ROOT: /usr/local/lib/android/sdk
 
-      # Step 10: Install Android SDK components directly using sdkmanager
+      # Step 9: Install Android SDK components directly using sdkmanager
       - name: Install Android SDK components
         run: |
           sdkmanager --update
           sdkmanager "platform-tools" "build-tools;30.0.3" "platforms;android-30"
 
-      # Step 11: Force Accept SDK licenses
+      # Step 10: Force Accept SDK licenses
       - name: Accept SDK licenses
         run: |
           yes | sdkmanager --licenses
 
-      # Step 12: Set permissions for SDK folder
+      # Step 11: Set permissions for SDK folder
       - name: Set permissions for SDK folder
         run: |
           sudo chown -R $USER:$USER /usr/local/lib/android/sdk
           sudo chmod -R 755 /usr/local/lib/android/sdk
 
-      # Step 13: Verify Android SDK installation
+      # Step 12: Verify Android SDK installation
       - name: Verify Android SDK installation
         run: |
           echo "Listing installed SDK components"
           sdkmanager --list
 
-      # Step 14: Install Buildozer and Cython
+      # Step 13: Install Buildozer and Cython
       - name: Install Buildozer and Cython
         run: |
           python -m pip install cython
           python -m pip install buildozer
 
-      # Step 15: Build APK
+      # Step 14: Build APK
       - name: Build APK
         run: |
           buildozer android debug
 
-      # Step 16: Upload APK as an artifact
+      # Step 15: Upload APK as an artifact
       - name: Upload APK artifact
         uses: actions/upload-artifact@v3
         with:
