--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,6 +44,7 @@ jobs:
           wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
           unzip cmdline-tools.zip -d $HOME/.buildozer/android/platform/
           mv $HOME/.buildozer/android/platform/cmdline-tools $HOME/.buildozer/android/platform/tools
+          $HOME/.buildozer/android/platform/tools/bin/sdkmanager "platform-tools" "build-tools;34.0.0" "platforms;android-34" "extras;android;m2repository"
           echo "export ANDROID_HOME=$HOME/.buildozer/android/platform" >> $GITHUB_ENV
           echo "export PATH=$ANDROID_HOME/tools/bin:$ANDROID_HOME/tools:$ANDROID_HOME/platform-tools:$PATH" >> $GITHUB_ENV
 
