--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,11 +40,11 @@ jobs:
       # Step 5: Set up Android SDK
       - name: Install Android SDK
         run: |
-          mkdir -p $HOME/.buildozer/android/platform
+          mkdir -p $HOME/.buildozer/android/platform/cmdline-tools
           wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
-          unzip cmdline-tools.zip -d $HOME/.buildozer/android/platform/
+          unzip cmdline-tools.zip -d $HOME/.buildozer/android/platform/cmdline-tools/
           mkdir -p $HOME/.buildozer/android/platform/cmdline-tools/latest
-          mv $HOME/.buildozer/android/platform/cmdline-tools/cmdline-tools/* $HOME/.buildozer/android/platform/cmdline-tools/latest
+          mv $HOME/.buildozer/android/platform/cmdline-tools/cmdline-tools/* $HOME/.buildozer/android/platform/cmdline-tools/latest || mv $HOME/.buildozer/android/platform/cmdline-tools/* $HOME/.buildozer/android/platform/cmdline-tools/latest
           $HOME/.buildozer/android/platform/cmdline-tools/latest/bin/sdkmanager "platform-tools" "build-tools;34.0.0" "platforms;android-34" "extras;android;m2repository"
           echo "export ANDROID_HOME=$HOME/.buildozer/android/platform" >> $GITHUB_ENV
           echo "export PATH=$ANDROID_HOME/tools/bin:$ANDROID_HOME/tools:$ANDROID_HOME/platform-tools:$PATH" >> $GITHUB_ENV
