--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,69 +1,24 @@
 name: Build APK
-
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-
+on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      # Step 1: Checkout your repository
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      # Step 2: Set up Python 3.11
+      - uses: actions/checkout@v2
       - name: Set up Python 3.11
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v2
         with:
-          python-version: '3.11'
-
-      # Step 3: Install system dependencies
+          python-version: 3.11
       - name: Install dependencies
         run: |
-          sudo apt update
-          sudo apt install -y \
-            python3.11-venv python3.11-distutils python3.11-dev \
-            build-essential libssl-dev libffi-dev zlib1g-dev \
-            openjdk-17-jdk unzip wget
-          sudo apt install -y libgl1-mesa-dev libgles2-mesa-dev
-
-      # Step 4: Set up Buildozer dependencies
-      - name: Install Buildozer and dependencies
-        run: |
-          python3.11 -m pip install --upgrade pip setuptools wheel
-          python3.11 -m pip install buildozer cython
-
-      # Step 5: Set up Android SDK
-      - name: Install Android SDK
-        run: |
-          mkdir -p $HOME/.buildozer/android/platform/cmdline-tools
-          wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
-          unzip cmdline-tools.zip -d $HOME/.buildozer/android/platform/cmdline-tools/
-          mkdir -p $HOME/.buildozer/android/platform/cmdline-tools/latest
-          mv $HOME/.buildozer/android/platform/cmdline-tools/cmdline-tools/* $HOME/.buildozer/android/platform/cmdline-tools/latest || mv $HOME/.buildozer/android/platform/cmdline-tools/* $HOME/.buildozer/android/platform/cmdline-tools/latest
-          $HOME/.buildozer/android/platform/cmdline-tools/latest/bin/sdkmanager "platform-tools" "build-tools;34.0.0" "platforms;android-34" "extras;android;m2repository"
-          echo "export ANDROID_HOME=$HOME/.buildozer/android/platform" >> $GITHUB_ENV
-          echo "export PATH=$ANDROID_HOME/tools/bin:$ANDROID_HOME/tools:$ANDROID_HOME/platform-tools:$PATH" >> $GITHUB_ENV
-
-      # Step 6: Configure Buildozer
-      - name: Prepare Buildozer spec
-        run: |
-          if [ ! -f buildozer.spec ]; then
-            buildozer init
-          fi
-
-      # Step 7: Build APK
+          pip install --upgrade pip
+          pip install buildozer
+          sudo apt-get install -y python3-pip build-essential git python3 python3-dev ffmpeg libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev libportmidi-dev libswscale-dev libavformat-dev libavcodec-dev zlib1g-dev
       - name: Build APK
         run: |
           buildozer android debug
-
-      # Step 8: Upload APK artifact
       - name: Upload APK
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v2
         with:
-          name: app-debug.apk
+          name: app-debug
           path: bin/*.apk
