--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,15 @@ jobs:
         with:
           python-version: 3.11
 
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v2
+
       - name: Install dependencies
         run: |
           pip install --upgrade pip
@@ -40,7 +49,7 @@ jobs:
 
       - name: Install Android SDK tools
         run: |
-          sdkmanager "platform-tools" "platforms;android-28" "build-tools;28.0.3"
+          sdkmanager "platform-tools" "platforms;android-30" "build-tools;30.0.3"
 
       - name: Set Android SDK path
         run: |
