--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,71 +1,20 @@
-name: Build APK
-on: [push, pull_request]
+on:
+  push:
+    branches: [ main ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up Python 3.11
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.11
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-
-      - name: Setup Android SDK
-        uses: android-actions/setup-android@v2
-
-      - name: Install dependencies
-        run: |
-          pip install --upgrade pip
-          pip install buildozer
-          pip install cython==0.29.33
-          sudo apt-get update
-          sudo apt-get install -y \
-            python3-pip \
-            build-essential \
-            git \
-            python3 \
-            python3-dev \
-            ffmpeg \
-            libsdl2-dev \
-            libsdl2-image-dev \
-            libsdl2-mixer-dev \
-            libsdl2-ttf-dev \
-            libportmidi-dev \
-            libswscale-dev \
-            libavformat-dev \
-            libavcodec-dev \
-            zlib1g-dev
-
-      - name: Accept Android SDK licenses
-        run: yes | sdkmanager --licenses
-
-      - name: Install Android SDK tools
-        run: |
-          sdkmanager "platform-tools" "platforms;android-30" "build-tools;30.0.3"
-
-      - name: Set Android SDK path
-        run: |
-          echo "sdk.dir=$ANDROID_HOME" > local.properties
-
-      - name: Clean Buildozer cache
-        run: |
-          rm -rf .buildozer
-          buildozer android clean
-
+      - uses: actions/checkout@v4
       - name: Build APK
-        run: |
-          buildozer -v android debug
-
-      - name: Upload APK
-        uses: actions/upload-artifact@v3
+        uses: digreatbrian/buildozer-action@v4
         with:
-          name: app-debug
-          path: bin/*.apk
+          python-version: 3.8
+          buildozer-cmd: buildozer -v android debug
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: package
+          path: ./bin/*.apk
