--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,20 +1,61 @@
+name: Build APK
+
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
+  pull_request:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Build APK
-        uses: digreatbrian/buildozer-action@v4
-        with:
-          python-version: 3.8
-          buildozer-cmd: buildozer -v android debug
 
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
+    steps:
+      # Step 1: Checkout your repository
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      # Step 2: Set up Python
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          name: package
-          path: ./bin/*.apk
+          python-version: "3.11"
+
+      # Step 3: Install required system packages
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libffi-dev libssl-dev zlib1g-dev \
+              libbz2-dev libreadline-dev libsqlite3-dev curl llvm \
+              libncurses5-dev libncursesw5-dev xz-utils tk-dev \
+              libxml2-dev libxmlsec1-dev liblzma-dev zip unzip
+
+      # Step 4: Install buildozer and dependencies
+      - name: Install Buildozer
+        run: |
+          pip install --upgrade pip
+          pip install buildozer cython==0.29.36
+
+      # Step 5: Install Android SDK and NDK
+      - name: Install Android SDK and NDK
+        run: |
+          mkdir -p ~/.buildozer/android/platform
+          cd ~/.buildozer/android/platform
+          wget https://dl.google.com/android/repository/commandlinetools-linux-8512546_latest.zip
+          unzip commandlinetools-linux-8512546_latest.zip -d cmdline-tools
+          mkdir -p cmdline-tools/latest
+          mv cmdline-tools/cmdline-tools/* cmdline-tools/latest/
+          yes | cmdline-tools/latest/bin/sdkmanager --sdk_root=$HOME/.buildozer/android/platform "platform-tools" "build-tools;33.0.0" "platforms;android-33" "ndk;23.1.7779620" "cmdline-tools;latest"
+
+      # Step 6: Add Android SDK to PATH
+      - name: Set environment variables
+        run: |
+          echo "export ANDROID_HOME=$HOME/.buildozer/android/platform" >> $GITHUB_ENV
+          echo "export ANDROID_SDK_ROOT=$HOME/.buildozer/android/platform" >> $GITHUB_ENV
+          echo "export PATH=$HOME/.buildozer/android/platform/cmdline-tools/latest/bin:$HOME/.buildozer/android/platform/platform-tools:$PATH" >> $GITHUB_ENV
+        shell: bash
+
+      # Step 7: Build the APK
+      - name: Build APK
+        run: |
+          buildozer android debug
