--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,9 +36,26 @@ jobs:
           pip install --upgrade pip
           pip install buildozer cython==0.29.36
 
-    
+      # Step 5: Install Android SDK and NDK
+      - name: Install Android SDK and NDK
+        run: |
+          mkdir -p ~/.buildozer/android/platform
+          cd ~/.buildozer/android/platform
+          wget https://dl.google.com/android/repository/commandlinetools-linux-8512546_latest.zip
+          unzip commandlinetools-linux-8512546_latest.zip -d cmdline-tools
+          mkdir -p cmdline-tools/latest
+          mv cmdline-tools/cmdline-tools/* cmdline-tools/latest/
+          yes | cmdline-tools/latest/bin/sdkmanager --sdk_root=$HOME/.buildozer/android/platform "platform-tools" "build-tools;33.0.0" "platforms;android-33" "ndk;23.1.7779620" "cmdline-tools;latest"
 
-      # Step 5: Build the APK
+      # Step 6: Add Android SDK to PATH
+      - name: Set environment variables
+        run: |
+          echo "export ANDROID_HOME=$HOME/.buildozer/android/platform" >> $GITHUB_ENV
+          echo "export ANDROID_SDK_ROOT=$HOME/.buildozer/android/platform" >> $GITHUB_ENV
+          echo "export PATH=$HOME/.buildozer/android/platform/cmdline-tools/latest/bin:$HOME/.buildozer/android/platform/platform-tools:$PATH" >> $GITHUB_ENV
+        shell: bash
+
+      # Step 7: Build the APK
       - name: Build APK
         run: |
           buildozer android debug
