--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -121,7 +121,8 @@ jobs:
       - name: Install pip dependencies
         run: |
           pip install --upgrade pip
-          pip install buildozer cython==0.29.33 git+https://github.com/kivy/plyer.git
+          pip install buildozer git+https://github.com/kivy/plyer.git
+          pip3 install --user --upgrade Cython==0.29.33 virtualenv
 
       # Build with Buildozer
       - name: Build with Buildozer
